public interface Roles {

    //Class method that will be implemented from the classes that implements this class
    public String getRole();

}
