@startuml


interface Roles{
+abstract getRole()

}

interface DisplayInfo{
+abstract displayDetailsOfLend()
}


class Book{
 -String title
 -String author
 -int yearPublished
 -String genre
 +displayBookInfo()
}

class Perosn{
    -String name
    -int age
    -int iD
    +displayPersonInfo()
    +override getRole()
}


class LendingRecord{
    +override displayDetailsOfLend()
    +toFileString()
}

interface FileHandler{
    +saveToFil(ArrayList<LendingRecord> records)
    +loadFromFile()
}

class LendingRecordManager{
    -ArrayList<LendingRecord>
    +override SaveToFill()
}

LendingRecordManager ..|> FileHandler




Perosn ..|> Roles
LendingRecord ..|> DisplayInfo


@enduml